# wholybee-chartplotter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  chart_loader.hpp  chart_widget.cpp  chart_widget.hpp  main.cpp  settings.hpp  vcpkg.json
.github/workflows/: build.yml
docs/: ais_target_store.md  cm93.md  instruments.md  nav_data_store.md  opencpn_optimizations.md  performance.md  plugin_api.md  routes_waypoints_ux.md  symbols.md
plugins/gpx_plugin/: CMakeLists.txt  gpx_io.cpp  gpx_io.hpp  gpx_plugin.cpp  gpx_plugin.hpp  gpx_plugin.json  gpx_plugin_factory.cpp
plugins/instruments_plugin/: CMakeLists.txt  instrument_bar.cpp  instrument_bar.hpp  instrument_config.cpp  instrument_config.hpp  instrument_tile.cpp  instrument_tile.hpp  instruments.xml  instruments_plugin.cpp  instruments_plugin.hpp  instruments_plugin.json  instruments_plugin_factory.cpp  instruments_settings_page.cpp  instruments_settings_page.hpp
plugins/signalk_plugin/: CMakeLists.txt  signalk_client.cpp  signalk_client.hpp  signalk_decoder.cpp  signalk_decoder.hpp  signalk_plugin.cpp  signalk_plugin.hpp  signalk_plugin.json  signalk_plugin_factory.cpp
plugins/test_plugin/: CMakeLists.txt  test_plugin.cpp  test_plugin.json  test_plugin_factory.cpp
plugins/wmm_plugin/: CMakeLists.txt  wmm.cpp  wmm.hpp  wmm_plugin.cpp  wmm_plugin.hpp  wmm_plugin.json  wmm_plugin_factory.cpp
src/: about_dialog.cpp  about_dialog.hpp  actisense_ascii_parser.cpp  actisense_ascii_parser.hpp  ais_decoder.cpp  ais_decoder.hpp  ais_overlay.cpp  ais_overlay.hpp  ais_quick_info_window.cpp  ais_quick_info_window.hpp  ais_target_info_window.cpp  ais_target_info_window.hpp  ais_target_list_dialog.cpp  ais_target_list_dialog.hpp  ais_target_store.cpp  ais_target_store.hpp  app_info.hpp  chart_catalog.cpp  chart_catalog.hpp  chart_detail_dialog.cpp  chart_detail_dialog.hpp  chart_loader.cpp  chart_loader.hpp  chart_object.hpp  chart_object_info_window.cpp  chart_object_info_window.hpp  chart_sets_dialog.cpp  chart_sets_dialog.hpp  chart_symbol_size_dialog.cpp  chart_symbol_size_dialog.hpp  chart_view.cpp  chart_view.hpp  core_api.cpp  core_api.hpp  cpa_calculator.cpp  cpa_calculator.hpp  dangerous_ships_dialog.cpp  dangerous_ships_dialog.hpp  data_priority_dialog.cpp  data_priority_dialog.hpp  (+96 more)
tools/: gen_symbols.cpp
